# flaky-test-detective

./: .gitignore  README.md  flaky-report.json  pyproject.toml
.github/workflows/: test.yml
src/pytest_flaky_detective/: classifier.py  collector.py  json_writer.py  models.py  plugin.py  report.py  rerunner.py
tests/: test_classifier.py  test_demo.py
